--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
-<html>
+<!-- ICSO2O-Unit1-03-HTML-hello_world-->
+<html lang="en-ca">
   <head>
-    <title>Title</title>
+    <meta charset="uft-8">
+    <meta name="descirption" content="My first webpage, with proper style">
+    <meta name="keywords" content="mths, icso2o">
+    <meta name="author" content="Colton">
+    <title>My first webpage, with proper style</title>
   </head>
-  <body>
-    <p>Paragraph</p>
+  <style>
+    #my-header {
+      background-color: red;
+      color: orange;
+      padding: 40px;
+      text-align: center;
+    }
+  </style>
+  <body style="background-color: red;">
+    <h1 id="my-header">Style is important</h1>
+    <p style="background-color: yellow;">Proper HTML style is important</p>
+    <img src="./images/HTML-style-guide.jpeg" alt="style">
   </body>
 </html>
