--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       text-align: center;
     }
   </style>
-  <body style="background-color: red;">
+  <body style="background-color: blue;">
     <h1 id="my-header">Style is important</h1>
     <p style="background-color: yellow;">Proper HTML style is important</p>
     <img src="./images/HTML-style-guide.jpeg" alt="style">
